--- a/관측 가능 대상 조회.ipynb
+++ b/관측 가능 대상 조회.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table align=\"left\">\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/shaula0/Observable-Celestial-Object-List-Lookup/blob/0764eed19322504c77189c878665af334f243de4/%EA%B4%80%EC%B8%A1%20%EA%B0%80%EB%8A%A5%20%EB%8C%80%EC%83%81%20%EC%A1%B0%ED%9A%8C.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />구글 코랩에서 실행하기</a>\n",
+    "  </td>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "Nq9LWzaLpfiO"
    },
