--- a/관측 가능 대상 조회.ipynb
+++ b/관측 가능 대상 조회.ipynb
@@ -122,9 +122,9 @@
     "start_date = datetime.date(2025, 1, 1)\n",
     "end_date = datetime.date(2025, 12, 31)\n",
     "\n",
-    "# 관측 종료 시간(시, 분)\n",
-    "end_hour = 20\n",
-    "end_min = 30\n",
+    "# 관측 종료 시간\n",
+    "end_hour = 20   # 시\n",
+    "end_min = 30    # 분\n",
     "\n",
     "# (태양계) 일몰 n분 후 부터 조회\n",
     "planet_after_sunset_min = 30\n",
@@ -138,7 +138,7 @@
     "# 관측 대상 고도 n이상\n",
     "target_altitude = 25\n",
     "\n",
-    "# 조회 천체 목록 (태양계)\n",
+    "# 조회 천체 목록 (태양계) // 조회를 원하지 않을 경우 노란색 []은 놔두고 내부 내용만 지우세요.\n",
     "solar_objects = [\n",
     "    \"moon\",     # 달\n",
     "    \"venus\",    # 금성\n",
@@ -147,7 +147,7 @@
     "    \"saturn\"    # 토성\n",
     "]\n",
     "\n",
-    "# 조회 천체 목록 (태양계외 천체) (적경 RA, 적위 Dec)\n",
+    "# 조회 천체 목록 (태양계외 천체) (적경 RA, 적위 Dec) // 조회를 원하지 않을 경우 노란색 []은 놔두고 내부 내용만 지우세요.\n",
     "non_solar_objects = [\n",
     "    [\"M31\", (10.6847, 41.2692)],    # 안드로메다 은하\n",
     "    [\"M42\", (83.8221, -5.3911)],    # 오리온 성운\n",
@@ -428,6 +428,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 결과"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -449,6 +456,7 @@
    },
    "outputs": [],
    "source": [
+    "#결과 출력\n",
     "print(tabulate(df, headers='keys', tablefmt='psql', showindex=True))"
    ]
   },
